# shapoist_client

./: .gitignore  Cargo.toml  LICENSE  README.MD  ReadMeEnUs.MD  compile.sh  index.html  run.bat  run_web.bat
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/saving/shapoist/: MainActivity.java
assets/: setting.json  setting.toml
assets/chart/Identity Element/: map.shapoistmap  map.shapoistproject
assets/chart/TEST/: map.shapoistmap  map.shapoistproject
assets/language/en-US/: language.ini  tip.ini
assets/language/zh-CN/: language.ini  tip.ini
assets/styles/Default/: Config.json  Config.toml  MainPage.json  MainPage.toml
assets/styles/Default/Component/: ChartCard.json  ChartCard.toml
assets/styles/Default/Note/: ClickEffect.json  ClickEffect.toml  Slide.json  Slide.toml  Tap.json  Tap.toml
assets/styles/Default/Window/: Chat.json  Chat.toml  Edit.json  Edit.toml  EditNew.json  EditNew.toml  Multiplayer.json  Multiplayer.toml  Setting.json  Setting.toml  Shop.json  Shop.toml  Shutdown.json  Shutdown.toml  User.json  User.toml  Window.json  Window.toml
benches/: frames.rs
shapoist_assets/: settings.toml
src/: README.MD  ReadMeEnUs.MD  detail.rs  edit.rs  lib.rs  mainpage.rs  playpage.rs  resources.rs  result_page.rs
src/error/: error.rs
src/language/: language.rs
src/log_export/: log_export.rs  mod.rs
src/play/: mod.rs  note.rs  play_top.rs  timer.rs
src/setting/: setting.rs
src/system/: command.pest  command.rs  init.rs  mod.rs  shapo_language.pest  shapo_language.rs  system_function.rs
src/ui/: edit_page.rs  end_page.rs  mod.rs  page.rs  shapo.rs  ui.rs
src/ui/component/: button.rs  check_box.rs  color_picker.rs  combo_box.rs  inputbox.rs  mod.rs  shader.rs  slider.rs  window.rs
src/ui/shape/: animation.rs  bezier_curve.rs  circle.rs  image.rs  mod.rs  rectangle.rs  style.rs  text.rs
